{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 157,
  "lineage": "5058aca7-3024-cd31-5939-28142a67f185",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/terrafrom-u-vm-nic1",
            "internal_domain_name_suffix": "ozxduprvkbmevh13z5rfv5nrdb.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "terrafrom-u-vm-ipconfig11",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/terrafrom-u-vm-pip1",
                "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd"
              }
            ],
            "location": "canadaeast",
            "name": "terrafrom-u-vm-nic1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg2",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.linux_pip",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "terrafrom-u-vm1",
            "fqdn": "terrafrom-u-vm1.canadaeast.cloudapp.azure.com",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/terrafrom-u-vm-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "terrafrom-u-vm-pip1",
            "resource_group_name": "rg2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/nsg-prd",
            "location": "canadaeast",
            "name": "nsg-prd",
            "resource_group_name": "rg2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/nsg-prd2",
            "location": "canadaeast",
            "name": "nsg-prd2",
            "resource_group_name": "rg2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd",
            "name": "subnet-prd",
            "resource_group_name": "rg2",
            "virtual_network_name": "vnet-prd"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd2",
            "name": "subnet-prd2",
            "resource_group_name": "rg2",
            "virtual_network_name": "vnet-prd"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/nsg-prd",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd2",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/nsg-prd2",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3e3a6e76-5035-4a58-9f7d-cfe25afdb119",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd",
            "location": "canadaeast",
            "name": "vnet-prd",
            "resource_group_name": "rg2",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "terrafrom-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/terrafrom-w-vm1-nic",
            "internal_domain_name_suffix": "ozxduprvkbmevh13z5rfv5nrdb.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "terrafrom-w-vm1-ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/terrafrom-w-vm1-pip",
                "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd2"
              }
            ],
            "location": "canadaeast",
            "name": "terrafrom-w-vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg2",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2",
            "module.windows.azurerm_public_ip.windows_pip"
          ]
        },
        {
          "index_key": "terrafrom-w-vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/terrafrom-w-vm2-nic",
            "internal_domain_name_suffix": "ozxduprvkbmevh13z5rfv5nrdb.vx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "terrafrom-w-vm2-ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/terrafrom-w-vm2-pip",
                "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/vnet-prd/subnets/subnet-prd2"
              }
            ],
            "location": "canadaeast",
            "name": "terrafrom-w-vm2-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg2",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2",
            "module.windows.azurerm_public_ip.windows_pip"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "terrafrom-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/terrafrom-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "terrafrom-w-vm1-pip",
            "resource_group_name": "rg2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        },
        {
          "index_key": "terrafrom-w-vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/terrafrom-w-vm2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadaeast",
            "name": "terrafrom-w-vm2-pip",
            "resource_group_name": "rg2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01516507@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "project": "Learing"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_network_security_group.nsg2",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association",
            "module.network.azurerm_subnet_network_security_group_association.subnet_association2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.linux_rg2",
            "module.resource_group.azurerm_resource_group.rg2",
            "module.resource_group.azurerm_resource_group.win_rg2"
          ]
        }
      ]
    }
  ]
}